# JSEngine

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
examples/android/: build.gradle  settings.gradle
examples/android/app/: build.gradle  ndk-build.sh
examples/android/app/src/androidTest/java/com/song/ioscplus/: ExampleInstrumentedTest.java
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/assets/: canvas.js  chart.js  dom.js  main.js  promise.js  scroller.js  timers.js
examples/android/app/src/main/java/com/jnibridge/: ElementFactory.java  EngineScope.java  JSEngine.java  ModuleManager.java
examples/android/app/src/main/java/com/jnibridge/modules/: CanvasModule.java  EmptyModule.java  EngineMethod.java  ModuleBase.java  Navigation.java  TimerManager.java  UIModule.java
examples/android/app/src/main/java/com/jnibridge/modules/dom/: CanvasElement.java  CanvasRenderingContext2D.java  (+5 more)
examples/android/app/src/main/java/com/jnibridge/utils/: BundleLoader.java  IImageLoadListener.java  ImageLoadTask.java
examples/android/app/src/main/java/com/song/ioscplus/: MainActivity.java
examples/android/app/src/main/res/layout/: activity_main.xml
examples/android/app/src/main/res/values/: strings.xml  themes.xml
examples/android/app/src/main/res/values-night/: themes.xml
examples/android/app/src/main/res/xml/: network_security_config.xml
examples/android/app/src/test/java/com/song/ioscplus/: ExampleUnitTest.java
examples/android/gradle/wrapper/: gradle-wrapper.properties
examples/ios/ioscplus/: PodFile
examples/ios/ioscplus/ioscplus/: AppDelegate.swift  BodyYogaUINode.swift  ContainerYogaUINode.swift  DivYogaUINode.swift  EngineScope.h  EngineScope.mm  IUINode.swift  ImageYogaUINode.swift  Info.plist  InputYogaUINode.swift  JSEngineScope.swift  JSTimer.swift  JSTimerModule.swift  LabelYogaUINode.swift  NativeModule.swift  NativeModuleManager.swift  OCSwiftEngineProxy.swift  SceneDelegate.swift  UIModule.swift  UIRender.swift  ViewController.swift  YogaStyleHelper.swift  YogaUINode.swift  YogaUIRender.swift  YogaUIView.swift  bridge.h  bridge.mm  ioscplus-Bridging-Header.h  main.js
examples/ios/ioscplus/ioscplus.xcodeproj/: project.pbxproj
examples/ios/ioscplus/ioscplus.xcodeproj/project.xcworkspace/xcuserdata/song.xcuserdatad/: UserInterfaceState.xcuserstate
examples/ios/ioscplus/ioscplus.xcodeproj/xcuserdata/song.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
examples/ios/ioscplus/ioscplus.xcodeproj/xcuserdata/song.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/ios/ioscplus/ioscplus.xcworkspace/: contents.xcworkspacedata
examples/ios/ioscplus/ioscplus.xcworkspace/xcuserdata/song.xcuserdatad/: UserInterfaceState.xcuserstate
examples/ios/ioscplus/ioscplus.xcworkspace/xcuserdata/song.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
examples/ios/ioscplus/ioscplus/Assets.xcassets/main.dataset/: Contents.json  main.js
examples/ios/ioscplus/ioscplus/args/: ChildArgs.swift  CreateElementArgs.swift  GetAttributeArgs.swift  InsertChildArgs.swift  RemoveAttributeArgs.swift  ReplaceChildArgs.swift  ScrollToArgs.swift  SetAttributeArgs.swift  SetStyleArgs.swift
examples/ios/ioscplus/ioscplus/core/: ImageHelper.swift
examples/ios/ioscplus/ioscplus/jsengine/: EngineScope.h  JSEngineScope.swift  OCSwiftEngineProxy.swift  bridge.mm
examples/ios/ioscplus/ioscplusTests/: ioscplusTests.swift
examples/ios/ioscplus/ioscplusUITests/: ioscplusUITests.swift
examples/ios/ioscplus/jsengine_bridge.framework/: Info.plist  jsengine_bridge
examples/ios/ioscplus/jsengine_bridge.framework/Headers/: jsengine_bridge.h
examples/ios/ioscplus/my_bridge.framework/: my_bridge
scripts/: build_android.js  build_ios.js  build_ios_arm.js  build_ios_arm64.js  build_ios_simulator.js  build_polyfill.js  tasks.js  tasks_android.js  tasks_ios.js  tasks_polyfill.js
scripts/templates/: Info.plist
src/: CMakeLists.txt  array_test.cc  array_test.h  class_test.cc  class_test.h  config.h.in  func_test.cc  func_test.h  jsengine_bridge.cc  main.cc  my_bridge.cc  string_test.cc  string_test.h  values_test.cc  values_test.h
src/apps/: Animal.cc  Animal.h  Dog.cc  Dog.h  hello.cc  hello.h
src/core/: Context.cc  Engine.cc  NativeMethods.cc  Scope.cc  readme.md
src/core/jsengines/jsc/: JSCoreConsole.cc  JSCoreConsole.h  JSCoreContext.cc  JSCoreContext.h  JSCoreHelper.cc  JSCoreHelper.h  JSCoreModule.cc  JSCoreModule.h  JavaScriptCore.h
src/core/jsengines/quickjs/: QuickJSConsole.cc  QuickJSConsole.h  QuickJSContext.cc  QuickJSContext.h  QuickJSModule.cc  QuickJSModule.h  quickjs_bridge.hpp
src/core/jsengines/v8/: V8Console.cc  V8Console.h  V8Context.cc  V8Context.h  V8EngineAllocator.cc  V8EngineAllocator.h  V8EngineModule.cc  V8EngineModule.h  V8Runtime.cc  V8Runtime.h  readme.md
src/core/plugins/: EnginePlugin.cc
src/core/plugins/dom/: DomEnginePlugin.cc  DomEnginePlugin.h  DomPolyfill.cc  DomPolyfill.h
src/core/plugins/dom/polyfill/: BodyElement.ts  ContainerElement.ts  DivElement.ts  Document.ts  Element.ts  ElementAttribute.ts  ElementCache.ts  ElementFactory.ts  ImageElement.ts  NativeModule.ts  Node.ts  ScrollerElement.ts  Style.ts  UICommand.ts  UIEvent.ts  Utils.ts  index.ts  localStorage.ts  memoryStorage.ts  navigator.ts
src/core/plugins/dom/polyfill/canvas/: Canvas.ts  CanvasCommand.ts  CanvasGradient.ts  CanvasImageData.ts  CanvasImageSource.ts  CanvasPattern.ts  CanvasRenderingContext2D.ts  CanvasTextMetrics.ts
src/core/plugins/dom/polyfill/jsmodule/: JSModule.ts  JSModuleManager.ts  TimerJSModule.ts  UIEventJSModule.ts
src/core/timer/: Timer.cc  Timer.h  TimerManager.cc  TimerManager.h
src/include/: jsengine_bridge.h
src/jni/: Android.mk  Application.mk  MyBridge.cpp  MyBridge.h
src/jsc/: Engine.cc  NativeMethods.cc  Scope.cc  readme.md
src/jsc/jsengines/jsc/: AlitaGlobalObject.cc  AlitaGlobalObject.h  JSConsole.cc  JSConsole.h  JSCoreContext.cc  JSCoreContext.h  utils.cc  utils.h
src/jsc/jsengines/v8/: V8Context.h
typings/: index.d.ts
(+21 files in other folders)
